--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@hookform/error-message": "^2.0.0",
+    "axios": "^0.25.0",
+    "bootstrap-icons": "^1.7.2",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.24.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.3",
+    "styled-system": "^5.1.5",
+    "sweetalert2": "^11.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
